--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,6 +1,9 @@
 name: e2e
 on: 
-  workflow_dispatch
+  workflow_dispatch:
+    inputs: 
+      description: 'deployed url'
+      required: true
 jobs:
   e2e:
     runs-on: ubuntu-latest
